# QT-Video-chat

./: .gitignore  CMakeLists.txt
Client/: CMakeLists.txt
Client/src/: main.cpp
Client/src/media/: CameraCapture.cpp  CameraCapture.h
Client/src/media/Audio/: AudioController.cpp  AudioController.h
Client/src/media/Camera/: CameraCapture.h
Client/src/network/: NetworkManager.cpp  NetworkManager.h
Client/src/ui/: MainWindow.cpp  MainWindow.h
Server/: CMakeLists.txt
Server/src/: main.cpp
Server/src/core/: Server.cpp  Server.h
Server/src/network/: ClientConnection.cpp  ClientConnection.h
